
------------------------------------------------------------
2005-12-29  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-util.h,
	libfreeipmi/src/ipmi-rmcpplus-util.c
	(check_rmcpplus_rakp_message_2_key_exchange_authentication_code,
	check_rmcpplus_rakp_message_4_integrity_check_value): Alter
	parameter inputs and adjust code appropriately.

	* libfreeipmi/src/ipmi-rmcpplus-util.c
	(check_rmcpplus_rakp_message_2_key_exchange_authentication_code),
	libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_deconstruct_payload_special): Fix several bugs.
	
2005-12-28  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus.c (tmpl_rmcpplus_rakp_message_4):
	Renamed field based on IPMI 2.0 specification typo belief.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_deconstruct_payload_special),
	libfreeipmi/src/ipmi-rmcpplus-debug.c
	(_dump_rmcpplus_payload_special): Rework based on typo fix belief.

	* libfreeipmi/src/ipmi-rcmpplus-debug.c
	(_dump_rmcpplus_payload_special, _dump_rmcpplus_payload,
	check_rmcpplus_rakp_message_2_key_exchange_authentication_code): Various bug fixes.

	* libfreeipmi/src/ipmi-rmcpplus-util.c
	(check_rmcpplus_payload_type, check_rmcpplus_status_code,
	check_rmcpplus_message_tag,
	check_rmcpplus_remote_console_session_id): New functions.

	* Minor cosmetic changes for consistency through code.
	
2005-12-27  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-debug.c (fiid_obj_dump_rmcpplus):
	Fix prefix output bugs and compiler warnings.

	* libfreeipmi/src/ipmi-rmcpplus-util.c (_calculate_k_rakp_none,
	_ipmi_calculate_k, check_rmcpplus_session_trlr): Various minor bug
	fixes.

2005-12-23  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-debug.c
	(_dump_rmcpplus_payload_confidentiality_aes_cbc_128,
	_dump_rmcpplus_session_trlr),
	libfreeipmi/src/Attic/ipmi-rmcpplus-interface.c
	(_construct_payload_confidentiality_aes_cbc_128,
	_construct_trlr_session_auth_code, assemble_ipmi_rmcpplus_pkt,